<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="pay">Pay</string>
    <string name="customer_email_gmail_com">customer-email@gmail.com</string>
    <string name="secured_by">Secured by</string>
    <string name="logo">logo</string>
    <string name="choose_any_of_the_payment_method_below_to_pay">Choose any of the payment methods\nbelow to pay</string>
    <string name="pay_by_transfer">Pay by Transfer</string>
    <string name="pay_by_card">Pay by Card</string>
    <string name="cancel_payment">Cancel Payment</string>
    <string name="transfer_to_account_details_below">Transfer to account details below</string>
    <string name="account_number">Account Number</string>
    <string name="_98762371891">98762371891</string>
    <string name="copy">COPY</string>
    <string name="account_name">Account Name</string>
    <string name="abdullahi_abodunrin">Abdullahi Abodunrin</string>
    <string name="amount">Amount</string>
    <string name="pay_label">₦%1$s</string>
    <string name="pay_button_label">Pay ₦%1$s</string>
    <string name="opt_text">Enter the One Time Password (OTP)\nsent to %1$s to verify it</string>
    <string name="save_opt_text">Enter the One Time Password (OTP)\nsent to %1$s</string>
    <string name="save_resend_otp">Resend OTP in %1$s secs</string>
    <string name="use_this_account_only_for_this_transaction">Use this account only for this transaction</string>
    <string name="change_payment_method">Change payment method</string>
    <string name="i_have_sent_the_money">I have sent the money</string>
    <string name="expires_in">Expires in</string>
    <string name="_29_09">29:09</string>
    <string name="clock">clock</string>
    <string name="amucha_mfb">Amucha MFB</string>
    <string name="bank_name">Bank Name</string>
    <string name="caution">caution</string>
    <string name="account_has_expired">Account has expired</string>
    <string name="the_account_provided_for_this_transaction_has_expired">The account provided for this\ntransaction has expired.</string>
    <string name="i_ve_sent_the_money">I\'ve sent the money</string>
    <string name="try_again">Try again</string>
    <string name="try_another_payment_method">Try another payment method</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="by_closing_this_checkout_you_are_confirming_to_close_this_checkout_and_cancel_the_transaction">By closing this checkout, you are confirming\nto close this checkout and cancel the transaction.</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="your_payment_has_been_confirmed_successfully">Your Payment has been\nconfirmed successfully</string>
    <string name="your_payment_of_80_400_to_kurukuru_sweets_has_been_confirmed_you_will_now_be_redirected_to_your_merchant_s_site_thank_you">Your payment of ₦ %1$s to %2$s has been confirmed. You will now be redirected to your merchant’s app. Thank you</string>
    <string name="please_wait_we_are_confirming_your_payment_it_might_take_a_few_minutes">Please wait. We are confirming your payment, It might take a few minutes…</string>
    <string name="wait_time">Wait time</string>
    <string name="transaction_taking_long">This transaction has taken longer than usual? Kindly try again or get help, to continue. Thank you</string>
    <string name="need_help_with_this_transaction">Need help with this transaction?</string>
    <string name="close_checkout">Close checkout</string>
    <string name="time_elapsed">Time elapsed</string>

    <string name="get_help">Get help</string>
    <string name="note_that_this_transaction_will_be_completed_automatically_as_soon_as_we_confirm_your_payment">Note that this transaction will be completed automatically as soon as we confirm your payment.</string>
    <string name="need_further_help_reach_out_to_us_on_support_nomba_com">Need further help? Reach out to us on\n<b>support@nomba.com</b></string>
    <string name="longer_than_expected">Taking longer than expected? You don\'t need to stay here till we confirm it</string>
    <string name="keep_waiting">Keep waiting</string>
    <string name="enter_your_card_information_for_payment">Enter your card information for payment</string>
    <string name="card_number">Card Number</string>
    <string name="_0000_0000_0000_0000">0000 0000 0000 0000</string>
    <string name="expiry_date">Expiry date</string>
    <string name="mm_yy">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="_007">007</string>
    <string name="save_card_for_future_use">Save card for future use</string>
    <string name="please_enter_your_4_digit_card_pin_to_complete_transaction">Please enter your 4-digit card PIN to\ncomplete transaction</string>
    <string name="_0000">0000</string>
    <string name="please_wait">Please Wait</string>
    <string name="your_payment_failed">Your payment failed</string>
    <string name="the_stars_didn_t_align_just_right">The stars didn\'t align just right</string>
    <string name="try_another_card">Try another card</string>
    <string name="enter_phone_number_to_save_your_card_for_future_use">Enter phone number to save your\n card for future use</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="verify">Verify</string>
    <string name="change_phone_number">Change Phone Number</string>
    <string name="phone_number_confirmed">Phone number confirmed!</string>
    <string name="your_card_has_been_securely_saved_and_it_will_be_avaliable_for_your_next_checkout_with_1_s_you_will_now_be_redirected_to_your_merchant_s_app_thank_you">Your card has been securely saved and it will be avaliable for your next checkout with %1$s. You will now be redirected to your merchant’s app. Thank you</string>
    <string name="_08012341234">08012341234</string>


</resources>