<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/size_20"
    android:layout_height="match_parent">


    <View
        android:layout_width="match_parent"
        android:background="@color/neutral_two"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/line"
        android:layout_height="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/size_18"
        android:id="@+id/holder"
        android:gravity="center"
        android:padding="@dimen/size_30"
        app:layout_constraintTop_toBottomOf="@id/line"
        android:background="@drawable/payment_actions_bg"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:src="@drawable/help_icon"
            android:layout_marginBottom="@dimen/size_16"
            android:contentDescription="@string/caution"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/neutral_ten"
            android:lineSpacingMultiplier="1.1"
            android:gravity="center"
            android:text="@string/note_that_this_transaction_will_be_completed_automatically_as_soon_as_we_confirm_your_payment"
            android:layout_marginBottom="@dimen/size_4"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/email_label"
        android:fontFamily="@font/inter_regular"
        android:textColor="@color/neutral_ten"
        app:layout_constraintTop_toBottomOf="@id/holder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:lineSpacingMultiplier="1.1"
        android:layout_marginTop="@dimen/size_20"
        android:textAlignment="center"
        android:text="@string/need_further_help_reach_out_to_us_on_support_nomba_com"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/size_20"
        app:layout_constraintTop_toBottomOf="@id/email_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/size_20"
            android:background="@drawable/positive_button_bg"
            android:fontFamily="@font/inter_medium"
            android:padding="@dimen/size_10"
            android:textColor="@color/mainText"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="@dimen/font_16"
            android:id="@+id/keep_waiting_btn"
            android:textAllCaps="false"
            android:gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline"
            android:text="@string/keep_waiting"
            android:layout_marginEnd="@dimen/size_10"
            android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="186dp" />

        <androidx.appcompat.widget.AppCompatButton
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/size_20"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/guideline"
            android:layout_width="0dp"
            android:background="@drawable/cancel_border_bg"
            android:fontFamily="@font/inter_medium"
            android:padding="@dimen/size_10"
            android:id="@+id/close_checkout_btn"
            android:textColor="@color/mainText"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="@dimen/font_16"
            android:layout_marginStart="@dimen/size_10"
            android:textAllCaps="false"
            android:gravity="center"
            android:text="@string/close_checkout"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>